@@ -6,6 +6,7 @@ import click
 from cligj import use_rs_opt
 
 from .helpers import obj_gen, eval_feature_expression
+from fiona.fio import with_context_env
 
 
 @click.command(short_help="Calculate GeoJSON property by Python expression")
@@ -15,6 +16,7 @@ from .helpers import obj_gen, eval_feature_expression
               help="Overwrite properties, default: False")
 @use_rs_opt
 @click.pass_context
+@with_context_env
 def calc(ctx, property_name, expression, overwrite, use_rs):
     """
     Create a new property on GeoJSON features using the specified expression.
@@ -39,25 +41,24 @@ def calc(ctx, property_name, expression, overwrite, use_rs):
     """
     logger = logging.getLogger(__name__)
     stdin = click.get_text_stream('stdin')
-    with ctx.obj['env']:
-        try:
-            source = obj_gen(stdin)
-            for i, obj in enumerate(source):
-                features = obj.get('features') or [obj]
-                for j, feat in enumerate(features):
+    try:
+        source = obj_gen(stdin)
+        for i, obj in enumerate(source):
+            features = obj.get('features') or [obj]
+            for j, feat in enumerate(features):
 
-                    if not overwrite and property_name in feat['properties']:
-                        raise click.UsageError(
-                            '{0} already exists in properties; '
-                            'rename or use --overwrite'.format(property_name))
+                if not overwrite and property_name in feat['properties']:
+                    raise click.UsageError(
+                        '{0} already exists in properties; '
+                        'rename or use --overwrite'.format(property_name))
 
-                    feat['properties'][property_name] = eval_feature_expression(
-                        feat, expression)
+                feat['properties'][property_name] = eval_feature_expression(
+                    feat, expression)
 
-                    if use_rs:
-                        click.echo(u'\u001e', nl=False)
-                    click.echo(json.dumps(feat))
+                if use_rs:
+                    click.echo(u'\u001e', nl=False)
+                click.echo(json.dumps(feat))
 
-        except Exception:
-            logger.exception("Exception caught during processing")
-            raise click.Abort()
+    except Exception:
+        logger.exception("Exception caught during processing")
+        raise click.Abort()
